maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:7: error: identifier expected but ')' found.
	def keepHandOnSideWall(dir:): DIRECTION =
                                   ^Escaper:29: error: ')' expected but ';' found.
	prendBiscuit()
^