maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() 
{
	var virage = 0
	var dir = Direction.NORTH
	
	def keepHandOnSideWall(dir:): DIRECTION =
	{
		gauche()
		if(estFaceMur())
		{
			droite()
			if(!estFaceMur())
				avance()
			else	droite()
		}
		else avance()

		return getDirection()
	}
		
	
	while(!estSurBiscuit())
	{
		dir = getDirection()
		if(dir!=keepHandOnSideWall(dir)
	}

	prendBiscuit()
}
